--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -7,48 +7,55 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-  compileSdkVersion 28
-  buildToolsVersion "28.0.3"
-  defaultConfig {
-    applicationId "vzijden.workout"
-    minSdkVersion 24
-    targetSdkVersion 28
-    versionCode 1
-    versionName "1.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    dataBinding {
-      enabled = true
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
+    defaultConfig {
+        applicationId "vzijden.workout"
+        minSdkVersion 24
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        dataBinding {
+            enabled = true
+        }
     }
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
-  }
 
-  lintOptions {
-    abortOnError false
-  }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation"org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.11"
 
-  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-  implementation "androidx.cardview:cardview:1.0.0"
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'androidx.test:runner:1.1.1'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.cardview:cardview:1.0.0"
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 //  wearApp project(':wear')
 //  implementation 'com.google.android.gms:play-services-wearable:16.0.1'
 
-  def room_version = "2.1.0-alpha03"
-  implementation "androidx.room:room-runtime:$room_version"
-  kapt "androidx.room:room-compiler:$room_version" // use kapt for Kotlin
+    def room_version = "2.1.0-alpha03"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version" // use kapt for Kotlin
 
-  implementation "org.jetbrains.anko:anko:0.10.8"
-  implementation 'com.google.android.material:material:1.0.0'
+    implementation "org.jetbrains.anko:anko:0.10.8"
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'commons-io:commons-io:2.4'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
+    testImplementation 'org.json:json:20180813'
 }
