--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
 
         </activity>
 
+        <activity android:name=".view.exercises.SelectExerciseActivity"/>
+
 
         <meta-data
                 android:name="preloaded_fonts"
