--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.core:core:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.11"
 
 
@@ -52,10 +53,12 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version" // use kapt for Kotlin
 
     implementation "org.jetbrains.anko:anko:0.10.8"
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
+
     implementation 'commons-io:commons-io:2.4'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
     testImplementation 'org.json:json:20180813'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
