--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".view.main.MainActivity"
+                android:name=".view.home.MainActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -30,6 +30,8 @@
         </activity>
 
         <activity android:name=".view.exercises.SelectExerciseActivity"/>
+
+        <activity android:name=".view.workout.CurrentWorkoutActivity"/>
 
 
         <meta-data
