--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'androidx.core:core:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.11"
 
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.cardview:cardview:1.0.0"
