--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,5 +1,3 @@
-
-
 apply plugin: 'com.android.library'
 
 
@@ -43,6 +41,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha02'
 
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+
+    implementation project(':domain')
 
     def room_version = "2.1.0-alpha03"
     implementation "androidx.room:room-runtime:$room_version"
@@ -58,7 +60,9 @@ dependencies {
 
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
+    androidTestImplementation "android.arch.persistence.room:runtime:1.1.1"
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
 }
 
 android {
