working data and domain

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     androidTestImplementation "android.arch.persistence.room:runtime:1.1.1"
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
     androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+    androidTestImplementation 'junit:junit:4.12'
 }
 
 android {
