--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -56,7 +56,12 @@ dependencies {
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation 'com.google.android.material:material:1.1.0-alpha02'
 
+    implementation 'com.google.dagger:dagger-android:2.20'
+    kapt 'com.google.dagger:dagger-android-processor:2.20'
+    kapt 'com.google.dagger:dagger-compiler:2.20'
+
     implementation 'commons-io:commons-io:2.4'
+
 
     implementation project(':data')
     implementation project(':domain')
