--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="vzijden.PlannedWorkout">
+          package="vzijden.workout">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
-            android:name=".App"
+            android:name="vzijden.workout.App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -13,7 +13,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".view.home.MainActivity"
+                android:name="vzijden.workout.view.home.MainActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -22,16 +22,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="vzijden.PlannedWorkout.view.schedulePojo.PlannedWorkout.EditWorkoutActivity">
+        <activity android:name="vzijden.workout.view.schedule.workout.EditWorkoutActivity">
             <intent-filter>
-                <action android:name="PlannedWorkout.intent.action.editschedule"/>
+                <action android:name="workout.intent.action.editschedule"/>
             </intent-filter>
 
         </activity>
 
-        <activity android:name=".view.exercises.SelectExerciseActivity"/>
+        <activity android:name="vzijden.workout.view.exercises.SelectExerciseActivity"/>
 
-        <activity android:name=".view.PlannedWorkout.CurrentWorkoutActivity"/>
+        <activity android:name="vzijden.workout.view.workout.CurrentWorkoutActivity"/>
 
 
         <meta-data
