--- a/domain/src/main/AndroidManifest.xml
+++ b/domain/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="vzijden.workout.data"
+<manifest package="vzijden.workout.domain"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
