--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -35,17 +35,18 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    implementation project(':data')
+    implementation project(':domain')
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core:1.0.0'
+    implementation 'androidx.core:core:1.0.1'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.11"
 
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.cardview:cardview:1.0.0"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 //  wearApp project(':wear')
 //  implementation 'com.google.android.gms:play-services-wearable:16.0.1'
 
@@ -56,15 +57,24 @@ dependencies {
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation 'com.google.android.material:material:1.1.0-alpha02'
 
-    implementation 'com.google.dagger:dagger-android:2.20'
-    kapt 'com.google.dagger:dagger-android-processor:2.20'
-    kapt 'com.google.dagger:dagger-compiler:2.20'
+    kapt 'com.google.dagger:dagger-compiler:2.21'
+    implementation 'com.google.dagger:dagger-android:2.21'
+    kapt 'com.google.dagger:dagger-android-processor:2.21'
+    implementation 'com.google.dagger:dagger-android-support:2.20'
+
+
 
     implementation 'commons-io:commons-io:2.4'
 
 
-    implementation project(':data')
-    implementation project(':domain')
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
