--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="vzijden.workout.view.schedule.workout.EditWorkoutActivity">
+        <activity android:name=".view.edit.workout.EditWorkoutActivity">
             <intent-filter>
                 <action android:name="workout.intent.action.editschedule"/>
             </intent-filter>
@@ -31,7 +31,7 @@
 
         <activity android:name="vzijden.workout.view.exercises.SelectExerciseActivity"/>
 
-        <activity android:name="vzijden.workout.view.workout.CurrentWorkoutActivity"/>
+        <!--<activity android:name="vzijden.workout.view.workout.CurrentWorkoutActivity"/>-->
 
 
         <meta-data
