--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -70,14 +70,26 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
     testImplementation 'org.json:json:20180813'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation "android.arch.persistence.room:runtime:1.1.1"
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    androidTestImplementation "android.arch.persistence.room:testing:1.1.1"
+    androidTestImplementation 'junit:junit:4.12'
+}
+
+android {
+    defaultConfig {
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
 }
