Show logged exercises

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <activity android:name="vzijden.workout.view.exercises.SelectExerciseActivity"/>
 
-        <!--<activity android:name="vzijden.workout.view.workout.CurrentWorkoutActivity"/>-->
+        <activity android:name="vzijden.workout.view.workout.CurrentWorkoutActivity"/>
 
 
         <meta-data
