--- a/data/build.gradle
+++ b/data/build.gradle
@@ -27,16 +27,17 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.11"
     implementation 'com.google.android.material:material:1.1.0-alpha02'
 
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-
-
     implementation project(':domain')
 
-    def room_version = "2.1.0-alpha03"
+    def room_version = "2.2.3"
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version" // use kapt for Kotlin
-    implementation "android.arch.persistence.room:rxjava2:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
 
 
     implementation "org.jetbrains.anko:anko:0.10.8"
